Closed Bug 59661 Opened 25 years ago Closed 24 years ago

Occurances of uninitialized variables being used before being set.

Categories

(Core :: Networking, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla0.9.3

People

(Reporter: rich.burridge, Assigned: dougt)

References

Details

Attachments

(1 file)

For more details on this problem, see: http://bugzilla.mozilla.org/show_bug.cgi?id=59652 This bug is just for the warnings in various source files in the Networking module: nsMemCacheChannel.cpp:128: warning: `nsresult rv' might be used uninitialized in this function nsMemCacheChannel.cpp:144: warning: `nsresult rv' might be used uninitialized in this function ---- nsMIMEService.cpp:89: warning: `nsresult rv' might be used uninitialized in this function ---- nsUnknownDecoder.cpp:129: warning: `nsresult rv' might be used uninitialized in ../../../../dist/include/nsAReadableString.h:1085: warning: `int whichString' might be used uninitialized in this function ---- nsHTTPResponseListener.cpp:837: warning: `nsresult rv' might be used uninitialized in this function ---- nsJARChannel.cpp:172: warning: `nsresult rv' might be used uninitialized in this function ----
Blocks: 59652
Gagan, can I get you to review this patch?
Assignee: gagan → darin
Status: NEW → ASSIGNED
r=gagan
sr=mscott
Fixed this on the trunk.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Blocks: 60740
Change also checked into the OEM branch.
mozilla/netwerk/streamconv/converters/nsFTPDirListingConv.cpp: In method `char *nsFTPDirListingConv::DigestBufferLines (char *, nsCAutoString &)': nsFTPDirListingConv.cpp:886: warning: `long unsigned int size' might be used uninitialized in this function
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
-> dougt
Assignee: darin → dougt
Status: REOPENED → NEW
Target Milestone: --- → mozilla0.9.3
Aleksey, I don;t see how size can be used unitialized. It is being inited using the 18th char of the linebuffer. What compiler are you using? Marking as Fixed since this bug morphed. If you still think that this is a problem, please file a seperate bug.
Status: NEW → RESOLVED
Closed: 25 years ago24 years ago
Resolution: --- → FIXED
See bug 119220 for more warnings
QA Contact: tever → benc
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: