Fixes bug 59661.  Occurances of uninitialized variables...  r=gagan, sr=mscott.